--- a/index.html
+++ b/index.html
@@ -106,5 +106,9 @@
     <p>
         Insert any long text content that scrolls away while the header and logo stay on top
     </p>
+
+    <div>
+        <a class="lollipop" href="">🍭</a>
+    </div>
 </body>
 </html>
