--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@
         Insert any long text content that scrolls away while the header and logo stay on top
     </p>
 
-    <div>
-        <a class="lollipop" href="">🍭</a>
-    </div>
+        <a class="🍭" href="">🍭</a>
 </body>
 </html>
