--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
 </head>
 <body>
     
-    <header>
-        <h1>Logo</h1>
-        <a class="hamburger" href="">🍔</a>
+<header>
+  <!--       <h1>Logo</h1>
+        <a class="hamburger" href="">🍔</a> -->
+
+        <a class="#" href="">Home</a>
+        <a class="#" href="">About</a> 
+        <a class="#" href="">Contact us</a>
+        <a class="#" href="">Products</a>
+
     </header>
-    <p>
+
+    <div class="grid-container">
+
+    </div>1</div>
+    </div>2</div>
+    </div>3</div>
+    </div>4</div>
+    </div>5</div>
+    </div class="last">6</div>
+
+    </div>
+
+<!--     <div class="container">
+        <p>
+            Center me on the page
+        </p>  
+    </div> -->
+
+    <!-- <p>
         Insert any long text content that scrolls away while the header and logo stay on top
     </p>
     <p>
@@ -105,7 +129,7 @@
     </p>
     <p>
         Insert any long text content that scrolls away while the header and logo stay on top
-    </p>
+    </p> -->
 
         <a class="🍭" href="">🍭</a>
 </body>
